--- a/VRChat/77/1050077.html
+++ b/VRChat/77/1050077.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "r83Bo02k6MTKJ670BIi3fUt7ttaJY2RR304t8pHhBy0="></script>
+    "Wmb7lOUxGX/8OEMQhz4lowI8OQGU9lwvF8oEyWtO7ng="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"YAMADAの頭部","description":"YAMADAの頭部とおまけの帽子とサングラスだけ\n\nバリエーションありますが中身は全く同じです　物好き用です\n\n時間を無駄にする余裕がある人はDLしてね♡","url":"https://booth.pm/ja/items/1050077","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c446b467-12cc-4120-b72b-ec91668ac656/i/1050077/db2e50d6-5289-4979-ba2b-bcdccbec0e24_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r83Bo02k6MTKJ670BIi3fUt7ttaJY2RR304t8pHhBy0="></script>
+    nonce="Wmb7lOUxGX/8OEMQhz4lowI8OQGU9lwvF8oEyWtO7ng="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1050077/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1050077/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
