--- a/VRChat/78/1049978.html
+++ b/VRChat/78/1049978.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8o6Bbgo78IjJY3oxWCqpvpZeWhl27L6p94jwUZGQ6Jg="></script>
+    "jQViCoO+rDVxiZW2BAq9cGyD8L5djh7Zno69cOwL17g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハロウィンパンプキンセット[FBXデータファイル　3DCGオブジェクト]","description":"【品名】fbx datafile 3DCG object [ハロウィンカボチャセット][Halloween pumpkin set]\nフリー素材\n\n◆利用想定　VRchat　Vtuber\n◆ポリゴン数　各590～690ポリゴン\n\n＞通常モデル\nHalloween_PumpkinB\nHalloween_PumpkinR\nHalloween_PumpkinY\n目と口の色　黒、赤、黄色\n\n＞シェイプキーモデル\nShapeフォルダ内\nHalloween_Pumpkin\n目と口の色　基本黒　赤と黄色に色が変わるシェイプキー装備\n\n\n【Version】1.00\n【最終更新日】2018.10.12\n【Copyright】©2018つくｘ２工房.Maiky\n","url":"https://booth.pm/ja/items/1049978","offers":{"priceCurrency":"JPY","@type":"Offer","price":"128"},"image":"https://booth.pximg.net/c/620x620/50c466f8-ea25-4d84-97fb-a601d0055de7/i/1049978/42a4fb4c-44ad-4b64-ab12-d1602ecdd7c9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8o6Bbgo78IjJY3oxWCqpvpZeWhl27L6p94jwUZGQ6Jg="></script>
+    nonce="jQViCoO+rDVxiZW2BAq9cGyD8L5djh7Zno69cOwL17g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1049978/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1049978/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
