--- a/VRChat/64/1049764.html
+++ b/VRChat/64/1049764.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U3P//ls2zTmb1dvZB3oaXYxwwwKAM/ky52xzncBXctw="></script>
+    "OIrq4jig5IFzsqaJIvWXIB7+D6QowWeqqsoO69ykPX8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"無料：八稜錘(はちりょうすい)","description":"中国の八稜錘(はちりょうすい)という武器です。\n気になる方は調べてみてください。\n\n2個持って使う武器らしいので、使用する際は両手に配置するのをおすすめします。\n\nVRchatでの使用を想定した3Dモデルですが何にでも使用可能です。\n\nテクスチャはありません。\n2枚目4枚目6枚目の画像はUnityにあるマテリアルの設定でMetalicの値を上げたものです。\n\nポリゴン数：140\n\n・内容物\n\n　FBX\n\n\n・禁止事項\n　\n　改変の有無問わずデータの再配布・販売は 禁止です。\n\n\n\n","url":"https://booth.pm/ja/items/1049764","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fcf0d975-c982-4865-beba-1cd6e5c30f4a/i/1049764/38d6b1ac-7113-41d3-8d1e-76cd96c04cea_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U3P//ls2zTmb1dvZB3oaXYxwwwKAM/ky52xzncBXctw="></script>
+    nonce="OIrq4jig5IFzsqaJIvWXIB7+D6QowWeqqsoO69ykPX8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1049764/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1049764/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
