--- a/VRChat/70/1040870.html
+++ b/VRChat/70/1040870.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XqCXxPQdeV8DKzTNlVoI+rtVQ1EtFQaDyXKG3KBoxuw="></script>
+    "pKnIaEXTKa3Rm3PWvcjuZFYewXTK31hCBvYhSHujT60="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC】Misia-04","description":"柚吉ガバガバメカアバター04です\n216円クオリティなんであまり過度の期待はしないよう\n気が向いたら使う程度でお願いします。\n個人的に腰ガトリングが好み\nパーツ分けしてパーツどりにでもお使いくだせぇ","url":"https://booth.pm/ja/items/1040870","offers":{"priceCurrency":"JPY","@type":"Offer","price":"540"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1040870/f044da80-dc07-4b7c-ab5b-b01cedd3a630_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XqCXxPQdeV8DKzTNlVoI+rtVQ1EtFQaDyXKG3KBoxuw="></script>
+    nonce="pKnIaEXTKa3Rm3PWvcjuZFYewXTK31hCBvYhSHujT60="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1040870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1040870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
