--- a/VRChat/35/1047835.html
+++ b/VRChat/35/1047835.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "r+ltEIs6tE7nMOVP6p/G8dnACAur8gspKkD/WUr+8Vg="></script>
+    "FNbWxuE7DC8k8DKWwRb7/qADitceu/eKLH7oANb5S34="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】３D小物・「本」","description":"FBXの、ハードカバー本のデータです。\n3Dゲーム内でのステージ上の小物等にお使いください。\n\nまた、マテリアルを変えることで内容を別のものにできるので、それを利用した疑似ページ送りなどもできるはずです。\n\nサンプルのテクスチャを自由にいじって、あなただけの本を作ってみましょう。\n\n著作権は完全にした状態で提供（CC0）しますので、お好きなようにお使いください。","url":"https://booth.pm/ja/items/1047835","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8c1f91da-4c5a-427e-94f8-06989826b2ac/i/1047835/cc29ac19-68f5-4f36-9d12-ed9a27995e13_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r+ltEIs6tE7nMOVP6p/G8dnACAur8gspKkD/WUr+8Vg="></script>
+    nonce="FNbWxuE7DC8k8DKWwRb7/qADitceu/eKLH7oANb5S34="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1047835/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               245
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1047835/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               245
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
