--- a/VRChat/57/1047757.html
+++ b/VRChat/57/1047757.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cey7Dpl2PyIMTpb/n1iY3Xo+AwWrTaSX3dgIGRkPRKw="></script>
+    "J1suNa2Ow5skijoCq2BwhzbiPoJMFUmnVogFcFRp9jE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（03/10更新）VRChat想定 小物セット","description":"倉庫的ななにかです、中身が増える予定です。\n「小物セット」と「ブースト用小物セット」の中身は一緒です。\n\nVRChatで使うために作った小物です、それ以外は試してないのでわからないです。\n\n使用・改変などご自由してください。\n何も手を加えていない状態での再配布はやめて下さい。\n\nなにかあったときはこちらへ https://twitter.com/PTMVRC\n中身の最新情報はTwitterに呟きます。\n\n【中身】\n10/11 魔女っぽい帽子・棒付きキャンディ・飴玉\n10/13 バケツ・三角コーン・タンバリン・ビブラスラップ\n　　　(03/10スムースに更新)\n03/10 お玉・フライパン・プッシュボトル・おばけ","url":"https://booth.pm/ja/items/1047757","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/cb04778a-a63e-447b-9e8d-0bb98445c7a2/i/1047757/44fda31f-280f-47cc-a50d-f66575476315_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cey7Dpl2PyIMTpb/n1iY3Xo+AwWrTaSX3dgIGRkPRKw="></script>
+    nonce="J1suNa2Ow5skijoCq2BwhzbiPoJMFUmnVogFcFRp9jE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1047757/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1047757/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
