--- a/VRChat/66/1047666.html
+++ b/VRChat/66/1047666.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "c67jUJg3Kh22VkDH35pPZKJfv1dsGEBr5olDzTsGIok="></script>
+    "I6qynd/fts4lMF+yxcBEV/g8wOGnwX5Butnx1pf7WMA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キョンシーの帽子","description":"現バージョン　ver1.01\n※アップデートしました　\n　てっぺんにある球体が雑だったので手を加えました。\n　もしかしたら好みがあるかもしれないので旧バージョンも入　れておきます。\n\nキョンシーが付けている帽子です。\n\nお札については版権などがややこしそうなので真っ白です。\n好きな言葉を書いて使ってください。\n\n主にVRchatでの使用を想定した3Dモデルです。\nそれ以外の用途でもご利用いただけます。\n\n・内容物\n\nポリゴン数ギリギリで生きてる人用とポリゴン数余りまくってる人用の2つがあります。\n\n新・余ってる人用：ポリゴン数/816　画像1枚目・2枚目←何故か減った\n旧・余ってる人用：ポリゴン数/1382　画像5枚目・6枚目\n\n新・ギリギリの人用：ポリゴン数/250　画像3枚目・4枚目\n旧・ギリギリの人用：ポリゴン数/198　画像7枚目・8枚目\n","url":"https://booth.pm/ja/items/1047666","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/fcf0d975-c982-4865-beba-1cd6e5c30f4a/i/1047666/2d6fe4db-0936-4649-9239-dec4c96be6e0_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="c67jUJg3Kh22VkDH35pPZKJfv1dsGEBr5olDzTsGIok="></script>
+    nonce="I6qynd/fts4lMF+yxcBEV/g8wOGnwX5Butnx1pf7WMA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1047666/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1047666/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
